@@ -1,3 +1,9 @@
+2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/DialogManageFlags.h,
+	  src/DialogManageFlags.cc,
+	  src/Win_GParted.cc: improved behaviour of flagmanagementdialog.
+	  
 2006-04-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/OperationResizeMove.cc: fixed another issue in
